--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,17 @@
     "es2021": true,
     "jest": true
   },
-  "extends": ["react-app", "react-app/jest", "airbnb"],
+  "extends": [
+    "react-app",
+    "react-app/jest",
+    "airbnb",
+    "plugin:prettier/recommended"
+  ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": ["react", "prettier"],
   "rules": {}
 }
