--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,15 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier"],
-  "rules": {}
+  "plugins": [
+    "react",
+    "prettier"
+  ],
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {},
+      {}
+    ]
+  }
 }
