--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
+    "prettier": "npx prettier src --check",
+    "prettier:fix": "npm run prettier --write",
+    "format": "npm run prettier:fix && npm run lint:fix",
     "prepare": "husky install"
   },
   "eslintConfig": {
