updated prettier and eslint rules

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "prettier": "npx prettier src --check",
-    "prettier:fix": "npm run prettier --write",
+    "prettier:fix": "npx prettier src --write",
     "format": "npm run prettier:fix && npm run lint:fix",
     "prepare": "husky install"
   },
