--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,15 +15,8 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "prettier"
-  ],
+  "plugins": ["react", "prettier"],
   "rules": {
-    "prettier/prettier": [
-      "error",
-      {},
-      {}
-    ]
+    "prettier/prettier": ["error", {}, {}]
   }
 }
