--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,17 @@
 {
   "env": {
     "browser": true,
+    "commonjs": true,
     "es2021": true,
     "jest": true
   },
-  "extends": [
-    "react-app",
-    "react-app/jest",
-    "airbnb",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["react-app", "react-app/jest", "airbnb", "plugin:prettier/recommended"],
   "overrides": [],
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+    "ecmaVersion": "latest"
   },
-  "plugins": ["react", "prettier"],
+  "plugins": ["react"],
   "rules": {
-    "prettier/prettier": ["error", {}, {}]
+    "react/react-in-jsx-scope": "off"
   }
 }
