--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-  "tabWidth": 2,
-  "useTabs": false,
   "semi": true,
-  "singleQuote": false,
-  "printWidth": 80
+  "tabWidth": 2,
+  "printWidth": 150,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "jsxBracketSameLine": true
 }
